# naviterm

./: .gitignore  .python-version  README.md  main.py  naviterm.py  pyproject.toml
naviterm/: __init__.py  app.py  config.py  main.py
naviterm/musicapi/: connection.py
naviterm/player/: EventHandler.py  __init__.py  player.py  queue.py  util.py
naviterm/screens/: AlbumView.py  AllAlbumsView.py  Layout.py  NowPlaying.py  __init__.py  login.py
naviterm/widgets/: Sidebar.py
